--- a/KnowYourEnemyMutagen/KnowYourEnemyMutagen.csproj
+++ b/KnowYourEnemyMutagen/KnowYourEnemyMutagen.csproj
@@ -6,6 +6,8 @@
 
     <ItemGroup>
         <PackageReference Include="Mutagen.Bethesda" Version="0.18.0" />
+        <PackageReference Include="Mutagen.Bethesda.FormKeys.SkyrimSE" Version="1.0.0" />
+        <PackageReference Include="Mutagen.Bethesda.Kernel" Version="0.18.0" />
         <PackageReference Include="Mutagen.Bethesda.Synthesis" Version="0.8.3" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     </ItemGroup>
