--- a/KnowYourEnemyMutagen/KnowYourEnemyMutagen.csproj
+++ b/KnowYourEnemyMutagen/KnowYourEnemyMutagen.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0-windows7.0</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <TargetPlatformIdentifier>Windows</TargetPlatformIdentifier>
   </PropertyGroup>
 
@@ -9,7 +9,6 @@
     <PackageReference Include="Mutagen.Bethesda" Version="0.28.0" />
     <PackageReference Include="Mutagen.Bethesda.Synthesis" Version="0.17.5" />
     <PackageReference Include="Mutagen.Bethesda.FormKeys.SkyrimSE" Version="2.0.0" />
-    <PackageReference Include="Synthesis.Bethesda" Version="0.17.5" />
   </ItemGroup>
 
   <ItemGroup>
